@@ -1,3 +1,7 @@
+2019-12-04  Frank Ch. Eigler  <fche@redhat.com>
+
+	* run-debuinfod-find.sh: Test $DEBUGINFOD_PROGRESS.
+
 2019-12-11  Omar Sandoval  <osandov@fb.com>
 
 	* dwfl-report-segment-coalesce.c: New test.
